--- a/Assignment/pom.xml
+++ b/Assignment/pom.xml
@@ -93,6 +93,10 @@
 	        <artifactId>jaxb-impl</artifactId>
 	        <version>2.3.1</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
