--- a/AuthServer/pom.xml
+++ b/AuthServer/pom.xml
@@ -61,6 +61,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        
+        <dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+			<version>3.0.5</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
