--- a/User/src/main/resources/bootstrap-prod.yml
+++ b/User/src/main/resources/bootstrap-prod.yml
@@ -1,7 +1,7 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
   datasource:
     url: jdbc:mysql://localhost:3306/oauth?createDatabaseIfNotExist=false
     username: root
