--- a/User/src/main/resources/bootstrap-test.yml
+++ b/User/src/main/resources/bootstrap-test.yml
@@ -1,13 +1,9 @@
 spring:
-  datasource:
-    username: sa
-    password: 
-    url: jdbc:h2:mem:oauth;DB_CLOSE_ON_EXIT=FALSE
-    driverClassName: org.h2.Driver
-    platform: h2
-  h2:
-    console:
-      enabled: true
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    defer-datasource-initialization: true
+    hibernate:
+      ddl-auto: none
+  datasource:
+    url: jdbc:mysql://localhost:3306/oauth_test?createDatabaseIfNotExist=false
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
