--- a/Assignment/pom.xml
+++ b/Assignment/pom.xml
@@ -97,6 +97,10 @@
 		    <groupId>org.springframework.cloud</groupId>
 		    <artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>io.github.openfeign</groupId>
+		    <artifactId>feign-gson</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
