--- a/Course/src/main/resources/bootstrap-test.yml
+++ b/Course/src/main/resources/bootstrap-test.yml
@@ -11,3 +11,5 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     defer-datasource-initialization: true
+server:
+  port: 8081
