--- a/Course/pom.xml
+++ b/Course/pom.xml
@@ -101,6 +101,10 @@
 		    <groupId>io.github.openfeign</groupId>
 		    <artifactId>feign-gson</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>io.github.openfeign</groupId>
+		    <artifactId>feign-jackson</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
